--- a/src/styles/_hamburger-menu.css
+++ b/src/styles/_hamburger-menu.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   padding-left: 15px;
+  cursor: pointer;
 }
 
 .hamburger-menu-item {
@@ -67,4 +68,21 @@ a.hamburger-menu-item:hover {
 
 a.hamburger-menu-item:hover > .menu-item-icon {
   color: #fff;
+}
+
+.pseudo-hamburger-menu-item {
+  display: none;
+  position: absolute;
+  background-color: #202020;
+  height: var(--header-heigh);
+  width: var(--hamburger-menu-width);
+  color: #fff;
+  align-items: center;
+  padding-left: 15px;
+  height: var(--header-heigh);
+  font-size: 24px;
+}
+
+.hamburger-menu:hover + .pseudo-hamburger-menu-item {
+  display: flex;
 }
